--- a/client/src/style.css
+++ b/client/src/style.css
@@ -7,10 +7,13 @@
 body{
     background-color: rgb(37, 37, 37);
     display: flex;
+    flex-direction: column;
     width: 100vw;
-    height: 100vh;
+    height: auto;
     justify-content: center;
     align-items: center;
+    gap: 20px;
+    margin-bottom: 50px;
 }
 
 form{
@@ -20,6 +23,7 @@ form{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 100px;
 }
 
 form input{
@@ -27,12 +31,12 @@ form input{
     border-radius: 5px;
 }
 
-#name{
+#formName{
     height: 25px;
     width: 200px;
 }
 
-#message{
+#formMessage{
     background-color:wheat;
     border-radius: 5px;
     height: 60px;
@@ -40,8 +44,37 @@ form input{
 }
 
 form button{
-    background-color: aquamarine;
+    background-color: rgb(127, 240, 255);
     color:darkolivegreen;
     padding: 5px;
     border-radius: 5px;
+}
+
+form button:hover{
+    scale: 1.05;
+}
+
+form button:active{
+    scale: 1.00;
+}
+
+#messageBoard{
+    color: whitesmoke;
+    text-align: center;
+}
+
+#messageBoardTitle{
+    margin-top: 20px;
+}
+
+.name{
+    margin-top: 50px;
+}
+
+.message{
+    max-width: 320px;
+    height: auto;
+    margin-top: 10px;
+    margin-left: 20px;
+    margin-right: 20px;
 }
