--- a/client/src/style.css
+++ b/client/src/style.css
@@ -78,3 +78,20 @@ form button:active{
     margin-left: 20px;
     margin-right: 20px;
 }
+
+.delBtn{
+    margin: 10px;
+    padding: 3px;
+    background-color: rgb(31, 31, 31);
+    color: rgb(197, 197, 197);
+    border-radius: 5px;
+    border: 2px ridge darkslategrey;
+}
+
+.delBtn:hover{
+    scale: 1.05;
+}
+
+.delBtn:active{
+    scale: 1;
+}
